apollo-router/src/plugins/telemetry/metrics/snapshots/apollo_router__plugins__telemetry__metrics__apollo__test__apollo_metrics_exclude.snap
---
source: apollo-router/src/plugins/telemetry/metrics/apollo.rs
assertion_line: 322
expression: results
---
[
  {
    "stats": {},
    "operation_count": 1
  }
]
