apollo-router/src/plugins/telemetry/metrics/snapshots/apollo_router__plugins__telemetry__metrics__apollo__test__apollo_metrics_for_subscription.snap
---
source: apollo-router/src/plugins/telemetry/metrics/apollo.rs
expression: results
---
[
  {
    "request_id": "[REDACTED]",
    "stats": {
      "# -\nsubscription{userWasCreated{name}}": {
        "stats_with_context": {
          "context": {
            "client_name": "test_client",
            "client_version": "1.0-test",
            "operation_type": "subscription",
            "operation_subtype": "subscription-request",
            "result": ""
          },
          "query_latency_stats": {
            "latency": {
              "secs": 0,
              "nanos": 100000000
            },
            "cache_hit": false,
            "persisted_query_hit": null,
            "cache_latency": null,
            "root_error_stats": {
              "children": {},
              "errors_count": 0,
              "requests_with_errors_count": 0
            },
            "has_errors": true,
            "public_cache_ttl_latency": null,
            "private_cache_ttl_latency": null,
            "registered_operation": false,
            "forbidden_operation": false,
            "without_field_instrumentation": false
          },
          "per_type_stat": {},
          "extended_references": {
            "referenced_input_fields": {},
            "referenced_enums": {}
          },
          "enum_response_references": {}
        },
        "referenced_fields_by_type": {
          "Subscription": {
            "field_names": [
              "userWasCreated"
            ],
            "is_interface": false
          },
          "User": {
            "field_names": [
              "name"
            ],
            "is_interface": false
          }
        }
      }
    },
    "licensed_operation_count_by_type": {
      "type": "subscription",
      "subtype": "subscription-request",
      "licensed_operation_count": 1
    }
  }
]
